--- a/TODO.txt
+++ b/TODO.txt
@@ -8,6 +8,12 @@ STILL TODO:
 
   There might be a couple of movements to choose from, plus "no movement at all" (which is what we've currently got); each tournament would be associated with exactly one such, and it cannot be changed once the tournament is created.
 
+* Allow players to register an email address, and once they've done so, let them see hands in progress in tournaments in which they're not playing.
+
+  The idea is: if *they* know that *I* know their email address, they'll be less likely to divulge what they see to players in those hands.
+
+  Maybe make the "who looked at which hands when" information visible to everyone, as further disincentive.
+
 * Allow humans to submit feedback via a form or something.
 
   Only let them do this if I've got a confirmed email address for them; I imagine that'd reduce spam.
