--- a/TODO.txt
+++ b/TODO.txt
@@ -11,7 +11,7 @@ IN PROGRESS:
 
 * app:hand-list should have a way to filter the rows by tournament number
 
-* Completed tournaments have a summary showing each pair along with their score in matchpoints.  Allow sorting by various columns -- partners and score, certainly.  Also include a percentage, as per https://en.wikipedia.org/wiki/Bridge_scoring#Matchpoint_scoring
+* Completed tournaments have a summary showing each pair along with their score in matchpoints.  Allow sorting by various columns -- partners and score, certainly.
 
 
 STILL TODO:
