--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
 IN PROGRESS:
+* Consider using flexbox for the card display; see https://www.youtube.com/live/hrzNaWFsP_4 for tons of detail.
 
 STILL TODO:
 * The SSE events for "a call was made at table X" and "a play was made at table X" should be readable by *all* users, regardless of whether they're sitting at the table, so their browsers will update when they watch the hand; currently those players are getting 400s when listening to `/events/hand/xxx/`.
