--- a/TODO.txt
+++ b/TODO.txt
@@ -10,11 +10,12 @@ Sooo many problems ...
 - We've lost the green "it's your turn to play" background
 - I have no idea what direction I'm sitting
 - I can't see anything that tells me what the contract is
-- The old-style display is showing all four hands, even with god-mode off
-- I don't think the new-style display is reloading automatically when the server sends an event
 
 Smaller notes:
 
+- The "current trick" slide is laughably awful (the cards are teeny-weeny)
+
+- perhaps, after playing a card and reloading the page, we should show the "current trick" slide as the default, since that's certain to have new information (my hand, and the dummy's hand, only change once per trick, whereas the current trick changes four times per trick).
 
 using `2025-05-08T20:21:22+0000.sql`, looking at <http://localhost:9000/x/1/>:
 - different cards have different widths on my Pixel 7.  Interestingly, at <http://localhost:9000/hand/1/>, they're all the same width.  I've fiddled with various values for "font-family" and none works on both :-\
