--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,4 @@
 IN PROGRESS:
-* I broke God-mode :-(
-
 * I have changed the previous scheme of "reload the entire page whenever we get a server-sent event" to "when we get a server-sent event, redraw just the relevant bits", so that the user is entirely in control of what gets scrolled when.
 
   Which HTML things need to get updated?
@@ -14,6 +12,8 @@ IN PROGRESS:
   | During play    | current trick   | hand channel   |
 
 * About the above: perhaps I should restore the "legacy" hand view, but only for observers (i.e., users who are logged in, but haven't signed up for the tournament).  That way I can ensure that the carousel hand view is seen only by authenticated users, and thus can refer to `user.player` in its template.
+
+* I broke God-mode :-(  The only way I can think of to fix this easily is to restore the "legacy" hand view, as above.  Might's well just have it permanently in god-mode.
 
 * If I'm the dummy, carousel_style_play shows two slides with my hand.  That's dumb!
 
