--- a/TODO.txt
+++ b/TODO.txt
@@ -3,13 +3,28 @@ IN PROGRESS:
 
   Which HTML things need to get updated?
 
-  | when           | what            | where          | current status |
-  |----------------+-----------------+----------------+----------------|
-  | During auction | current auction | hand channel   |                |
-  | During auction | bidding box     | hand channel   |                |
-  | During play    | our hand        | player channel |                |
-  | During play    | dummy           | hand channel   |                |
-  | During play    | current trick   | hand channel   | ok             |
+  | when                | HTML to include | which channel & why         | current status |
+  |---------------------+-----------------+-----------------------------+----------------|
+  | auction: every call | current auction | hand: observers             |                |
+  | auction: every call | bidding box     | player: so they can call    |                |
+  | play: every play    | our hand        | player                      |                |
+  | play: every play    | dummy           | hand: observers and players |                |
+  | play: every play    | current trick   | hand: observers and players | ok             |
+
+  Maybe I should have more than just two channels.  Here I propose some, showing the URL, channel name, and description for each:
+
+  | url                                               | channel name                           | wozzit fur                                                                                                                |
+  |---------------------------------------------------+----------------------------------------+---------------------------------------------------------------------------------------------------------------------------|
+  | events/player/html/hand/<player_id>/              | player:html:hand:{player_id}           | for human player using a browser. Payload is HTML for their bidding box or hand, as appropriate.                          |
+  | events/player/html/chat/<receiving_player_id>/[a] | player:html:chat:{receiving_player_id} | for human player using a browser. Payload is HTML for an incoming chat.                                                   |
+  | events/player/json/<player_id>/                   | player:json:{player_id}                | strictly for the bot.  Shows calls and plays in the player's current hand.                                                |
+  | events/table/html/<hand_id>/                      | table:html:{hand_id}                   | for observers and the player: shows the current auction when that's relevant; otherwise shows current trick and the dummy |
+
+  [a] the message will include the name of the sender; the system will both add that name, and prohibit illegal chats (like from one partner to another when seated).
+
+  - probably a channel for lobby chats, although those fell off the face of the Earth long ago :-)
+
+  Can't think why I'd need a "hand-json" channel.
 
 * About the above: perhaps I should restore the "legacy" hand view, but only for observers (i.e., users who are logged in, but haven't signed up for the tournament).  That way I can ensure that the carousel hand view is seen only by authenticated users, and thus can refer to `user.player` in its template.
 
