Fix style attribute on #bidding-box

--- a/TODO.txt
+++ b/TODO.txt
@@ -31,6 +31,8 @@ IN PROGRESS:
 * I broke God-mode :-(  The only way I can think of to fix this easily is to restore the "legacy" hand view, as above.  Might's well just have it permanently in god-mode.
 
 * If I'm the dummy, carousel_style_play shows two slides with my hand.  That's dumb!
+
+* We're showing the carousel-style auction even if our player isn't seated.  (In particular, the hand in question has been abandoned)
 
 STILL TODO:
 * Carousel notes:
