--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,6 @@
 IN PROGRESS:
+* The hand-detail view doesn't tell me the names of my opponents.
+* AAAAAH <http://localhost:9000/hand/13/archive/> shows me all the cards!  I'm logged in as `_prez`.
 * I have changed the previous scheme of "reload the entire page whenever we get a server-sent event" to "when we get a server-sent event, redraw just the relevant bits", so that the user is entirely in control of what gets scrolled when.
 
   Which HTML things need to get updated?
