--- a/TODO.txt
+++ b/TODO.txt
@@ -3,15 +3,6 @@ IN PROGRESS:
 STILL TODO:
 * I'm fuzzy on the details, but I think I was logged in as a player who wasn't the declarer or dummy; after the last trick was played, the browser loaded my "player home page" (e.g. `/player/1/`) instead of something more useful, like the next hand, or the review of the previous hand.
 
-* If I'm not looking at the "current trick" slide, it can acquire crucial information (namely: cards played by other seats), and then disappear, without me ever seeing it.  Imagine I lead a card, and don't scroll away from my hand.  Now three other players will play; one of them wins the trick and leads to the next.  Eventually my hand's background will turn light green, telling me it's my turn to play the trick ... but I won't have seen the previous trick -- the three cards that followed mine are now gone.
-
-  So, maybe ...
-
-  - automatically scroll to the current trick as soon as I've played a card?
-  - replace the "current trick" slide with a much smaller doohickey on every remaining slide?
-  - Add a "previous trick" slide (perhaps above the "current trick" slide)?
-  - Have the server enforce a pause of a couple of seconds before anyone can lead to the 2nd-13th tricks?
-
 * Perhaps I should restore the "legacy" hand view, but only for observers (i.e., users who are logged in, but haven't signed up for the tournament).  That way I can ensure that the carousel hand view is seen only by authenticated users, and thus can refer to `user.player` in its template.
 
 * I broke God-mode :-(  The only way I can think of to fix this easily is to restore the "legacy" hand view, as above.  Might's well just have it permanently in god-mode.
@@ -178,6 +169,15 @@ MAYBE TODO:
 * Reconsider sqlite -- [this](https://gcollazo.com/optimal-sqlite-settings-for-django/) strongly suggests it's viable for smallish projects such as this.
 
 DONE:
+* If I'm not looking at the "current trick" slide, it can acquire crucial information (namely: cards played by other seats), and then disappear, without me ever seeing it.  Imagine I lead a card, and don't scroll away from my hand.  Now three other players will play; one of them wins the trick and leads to the next.  Eventually my hand's background will turn light green, telling me it's my turn to play the trick ... but I won't have seen the previous trick -- the three cards that followed mine are now gone.
+
+  So, maybe ...
+
+  ✓ automatically scroll to the current trick as soon as I've played a card?
+  ⌧ replace the "current trick" slide with a much smaller doohickey on every remaining slide?
+  ⌧ Add a "previous trick" slide (perhaps above the "current trick" slide)?
+  ⌧ Have the server enforce a pause of a couple of seconds before anyone can lead to the 2nd-13th tricks?
+
 * I have changed the previous scheme of "reload the entire page whenever we get a server-sent event" to "when we get a server-sent event, redraw just the relevant bits", so that the user is entirely in control of what gets scrolled when.
 
   Which HTML things need to get updated?
