--- a/TODO.txt
+++ b/TODO.txt
@@ -1,13 +1,19 @@
 IN PROGRESS:
 
 STILL TODO:
+* Consider using [django's built-in permissions](https://docs.djangoproject.com/en/5.1/topics/auth/default/#topic-authorization) to control access to hands, rather than doing it "by hand" (haw haw) as I'm currently doing.
+
+* At the end of a hand, display a button (where "Next board plz" used to be) that takes us to the current hand.
+
+* scrolling from my hand, through the dummy, to the current trick, can be tedious if both hands have a long suit.  Clicking the little left'n'right arrows doesn't scroll by the entire <li>; instead it seems to scroll by the width in pixels of the visible area.  This is a reasonable thing for a scrollbar to do, but it's not convenient here.  So either
+  - make it scroll by one <li> at a time, instead; or maybe
+  - bring back the little dots along the bottom that did exactly that
+
 * auction_carousel_view doesn't indicate that a hand has been abandoned.
 
 * We send an SSE event containing the hand-div on every play, but about half of that div -- all the "toast" stuff -- never varies.  We'd save perhaps 1K per event if we only sent the four suit divs.
 
   Dunno if this would save significant time, memory, or CPU; but it's an idea.
-
-* Perhaps I should restore the "legacy" hand view, but only for observers (i.e., users who are logged in, but haven't signed up for the tournament).  That way I can ensure that the carousel hand view is seen only by authenticated users, and thus can refer to `user.player` in its template.
 
 * I broke God-mode :-(  The only way I can think of to fix this easily is to restore the "legacy" hand view, as above.  Might's well just have it permanently in god-mode.
 
@@ -32,8 +38,6 @@ STILL TODO:
   Of course, I better censor the events so that they don't reveal the calls, or the cards played, to players who haven't yet played that board.
 
   This *might* be obviated by all the work I'm doing on the "carousel-via-css" branch.
-
-* At the end of a hand, display a button (where "Next board plz" used to be) that takes us to the current hand.
 
 * app:hand-list should have a way to filter the rows by tournament number
 
@@ -65,7 +69,6 @@ STILL TODO:
     > django-tasks possibly has the smallest feature set of all of them, but it's goal I believe is to be a reliably available, simple option with strong integration. Eventually you can write your own django extensions that need simple background workers and as long as you target django-tasks it'll work regardless of what the end project is actually running.
     > Django-q2 looks like it lands in the middle for features but has strong support for several different backends
 
-
 * Maybe put an X-Request-ID header on all responses? That way the API bot could log that after it gets a response.  Might make it easier to match up the bot's logs with the server's.
 
   I thought I was doing this, but making a call in the browser, with the developer tools on, certainly doesn't show that header in the POST respose.
@@ -93,8 +96,6 @@ STILL TODO:
 * God Mode doesn't show all four hands during the auction; only during play.
 
 * An RSS feed! Maybe each completed hand, or each completed tournament, would appear in it.
-
-* Consider using [django's built-in permissions](https://docs.djangoproject.com/en/5.1/topics/auth/default/#topic-authorization) to control access to hands, rather than doing it "by hand" (haw haw) as I'm currently doing.
 
 * Whatever happened to lobby chat?  It must have slipped into a crack at some point.
 
@@ -173,6 +174,8 @@ MAYBE TODO:
 * Reconsider sqlite -- [this](https://gcollazo.com/optimal-sqlite-settings-for-django/) strongly suggests it's viable for smallish projects such as this.
 
 DONE:
+* Perhaps I should restore the "legacy" hand view, but only for observers (i.e., users who are logged in, but haven't signed up for the tournament).  That way I can ensure that the carousel hand view is seen only by authenticated users, and thus can refer to `user.player` in its template.
+
 * If I'm not looking at the "current trick" slide, it can acquire crucial information (namely: cards played by other seats), and then disappear, without me ever seeing it.  Imagine I lead a card, and don't scroll away from my hand.  Now three other players will play; one of them wins the trick and leads to the next.  Eventually my hand's background will turn light green, telling me it's my turn to play the trick ... but I won't have seen the previous trick -- the three cards that followed mine are now gone.
 
   So, maybe ...
